--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ width 900px gave my menu 900px horizontal spread
 .header-container {
     color: #fff;
     background-color: #1F2937;
-    padding: 20px 0;
+    padding: 50px 0;
     display: flex;
     justify-content: center;
 }
@@ -91,13 +91,18 @@ width 900px gave my menu 900px horizontal spread
 }
 
 .signup-text {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .signup-button {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: bold;
-    background-color: #2d74cf;
+    border-radius: 10px; 
+    background: #2d74cf;
+    padding: 5px 0px 0px 25px;
+    width: 110px;
+    height: 30px;  
+ 
 }
 
 .header-image {
