--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,6 @@ width 900px gave my menu 900px horizontal spread
 }
 
 .header {
-        border: 1px solid #fff;
-
     width: 900px;
     height: 300px;
     display: flex;
@@ -80,10 +78,8 @@ width 900px gave my menu 900px horizontal spread
 }
 
 .header-text-section {
-    border: 1px solid #fff;
     max-width: 400px;
     flex-direction: column;
-   
 
 }
 
@@ -111,10 +107,10 @@ width 900px gave my menu 900px horizontal spread
  
 }
 
-.header-image {
+/* move my iage to the furthest as an item */ 
+.header-image-section {
     margin-left: auto;
-    display: flex;
-    justify-content: flex-end;
+   
 }
 
 /* 
