--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ Header Logo TExt
 
 /*universal font fall back 0 margin to rid of auto  margin*/
 * {
-    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -92,14 +92,14 @@ width 900px gave my menu 900px horizontal spread
     padding-bottom: 10px;
 }
 
-.signup-button {
+.signup-button-header {
     font-size: 17px;
     font-weight: bold;
     border-radius: 10px; 
     background: #2d74cf;
     padding: 5px 0px 0px 25px;
     width: 110px;
-    height: 30px;  
+    height: 38px;  
  
 }
 
@@ -137,7 +137,34 @@ width 900px gave my menu 900px horizontal spread
 .photo-grid-item {
     width: 300px;
     margin: 30px;
-   
+}
+
+.quote-container {
+    background-color: #E5E7EB;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote {
+    width: 700px;
+    display: flex;
+    justify-content: center; 
+    flex-direction: column;
+}
+
+.quote-text {
+    font-style: italic;
+    font-size: 23px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-author {
+    margin-left: auto;
+    font-size: 25px;
+    font-weight: bold;
+}
 /* 
 dark backgroudn color
 #1F2937
