finished styles to footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,10 +144,12 @@ width 900px gave my menu 900px horizontal spread
     padding: 100px;
     display: flex;
     justify-content: center;
+    margin-bottom: 75px;
 }
 
 .quote {
     width: 700px;
+    border-radius: 15px;
     display: flex;
     justify-content: center; 
     flex-direction: column;
@@ -165,6 +167,56 @@ width 900px gave my menu 900px horizontal spread
     font-size: 25px;
     font-weight: bold;
 }
+
+.footer-container {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    background-color: #2d74cf;
+    width: 900px;
+    height: 150px;
+    display: flex;
+    margin-bottom: 75px;
+    border-radius: 10px;
+    justify-content: center;
+}
+
+.footer-texts-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 13%;
+}
+
+.footer-title {
+    color: #fff;
+}
+
+.footer-signup-text {
+    color: #fff;
+
+}
+
+.signup-button {
+    border: 1px solid #ffffff;
+    color: #fff;
+    margin: auto;
+    padding-left: 50px;
+    font-size: 17px;
+    font-weight: bold;
+    border-radius: 10px; 
+    background: #2d74cf;
+    padding: 5px 0px 0px 25px;
+    width: 110px;
+    height: 38px;  
+    
+
+}
+
 /* 
 dark backgroudn color
 #1F2937
