--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,14 @@ Header Logo TExt
     box-sizing: border-box;
 }
 
+a {
+    color: #FFF;
+    text-decoration: none;
+}
+a:hover {
+ color: #fff;
+}
+
 /* padding gives my menu bar some cushion  */
 .menu-container {
     color: #fff;
@@ -97,7 +105,7 @@ width 900px gave my menu 900px horizontal spread
     font-weight: bold;
     border-radius: 10px; 
     background: #2d74cf;
-    padding: 5px 0px 0px 25px;
+    padding: 9px 0px 0px 25px;
     width: 110px;
     height: 38px;  
  
@@ -210,7 +218,7 @@ width 900px gave my menu 900px horizontal spread
     font-weight: bold;
     border-radius: 10px; 
     background: #2d74cf;
-    padding: 5px 0px 0px 25px;
+    padding: 9px 0px 0px 25px;
     width: 110px;
     height: 38px;  
     
